copied index.js from exercise 19 to see if I can use it

--- a/src/frontend/Fitness Resouces/pages/home.css
+++ b/src/frontend/Fitness Resouces/pages/home.css
@@ -93,7 +93,7 @@
 .fitness-app-container .register-today {
   overflow-wrap: break-word;
   font-family: 'Epilogue';
-  font-weight: 600;
+  font-weight: bold;
   font-size: 50px;
   color: #427798;
   
