add and fix links to login and home and fix some CSS in the workoutplan

--- a/src/frontend/Fitness Resouces/pages/workoutplan.css
+++ b/src/frontend/Fitness Resouces/pages/workoutplan.css
@@ -60,9 +60,8 @@
   color: #9E82D8;
 }
 .mac-book-air-3 .container {
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.07);
-  background: #FFFFFF;
-  position: relative;
+  position: relative; /* Ensure container is positioned relatively */
+  margin-top: 150px; 
   margin: 0 35px 507px 50px;
   display: flex;
   flex-direction: row;
@@ -204,7 +203,7 @@
   box-sizing: border-box;
 }
 .mac-book-air-3 .container-12 {
-  margin: 0 87px 41px 126px;
+  margin: 50px 87px 41px 126px;
   display: flex;
   flex-direction: row;
   width: 1179px;
@@ -362,3 +361,4 @@
   width: 1280px;
   box-sizing: border-box;
 }
+
