--- a/src/frontend/Fitness Resouces/pages/forget-password.css
+++ b/src/frontend/Fitness Resouces/pages/forget-password.css
@@ -50,3 +50,11 @@ input[type="email"] {
     cursor:pointer;
     width:100%;
 }
+.submit-button:hover{
+    background-color: #0056b3;
+}
+
+#message{
+    margin-top:20px;
+    color:green
+}
