--- a/src/frontend/Fitness Resouces/pages/forget-password.css
+++ b/src/frontend/Fitness Resouces/pages/forget-password.css
@@ -46,7 +46,7 @@ input[type="email"] {
     padding: 10px 20px;
     border:none;
     border-radius:5px;
-    font: size 16px;
+    font: 16px;
     cursor:pointer;
     width:100%;
 }
